@@ -1,0 +1,47 @@
+Example for an successfull Infoserver <=> Gameserver interaction
+
+=======================================================================================================================
+ISC Version: 2
+Last Update: 13.12.2006 21:48 GMT+1
+=======================================================================================================================
+
+S0: Gameserver
+S1: Infoserver
+==========================
+Gameserver startup
+{
+	Handshake 01
+	S0 => S1	0xF0 0x08 0x00 0x01 0x02 0x00 0x02 0x00
+	S0 <= S1	0xF0 0x06 0x00 0x03 0x00 0x00
+	
+	Handshake 02 (Md5 pw hash)
+	S0 => S1  0xF0 0x24 0x00 0x10 0x20 0x00 0x00 0x01 0x10 0x27 0x11 0xFA 0x99 0x1F 0xFF 0xFF 0x01 0x01 0x07 0x19 0x18 0x18 0xFF 0x10 0x27 0x11 0xFA 0x99 0x1F 0xFF 0xFF 0x01 0x01 0x07 0x19 0x18 0x18 0xFF
+	S0 <= S1  0xF0 0x06 0x00 0x12 0x00 0x00
+
+	GS Serverdata #1 // Name= Irata
+	S0 => S1  0xF0 0x0B 0x00 0x20 0x05 0x00 0x49 0x72 0x61 0x74 0x61
+	S0 <= S1  0xF0 0x0B 0x00 0x22 0x05 0x00 0x49 0x72 0x61 0x74 0x61
+	
+	GS Serverdata #2 // IP: 192.168.178.5 Port: 12000 Patchlevel: 200
+	S0 => S1	0xF0 0x0E 0x00 0x30 0x08 0x00 0x01 0xB6 0x0C 0x00 0x2E 0xE0 0xC8 0x00
+	S0 <= S1  0xF0 0x06 0x00 0x33 0x00 0x00
+	
+	GS Serverdata #4 // Minlevel connect: 0 Minlevel see Playercount: 0 SeeServer: 0
+	S0 => S1  0xF0 0x0E 0x00 0x50 0x06 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00
+	S0 <= S1  0xF0 0x06 0x00 0x52 0x00 0x00
+
+	ISC Update intervall-loop
+	{
+		GS Serverdata #3 // 8 Regular players, 2 Volunteers, 0 GMs and 1 Admin online
+		S0 => S1	0xF0 0x0E 0x00 0x40 0x08 0x00 0x08 0x00 0x02 0x00 0x00 0x00 0x01 0x00
+		S0 <= S1	0xF0 0x06 0x00 0x42 0x00 0x00
+	}
+}
+
+Gameserver shutdown
+S0 => S1  0xF0 0x06 0x00 0xFF 0x00 0x00  // Going down now
+S0 <= S1  0xF0 0x06 0x00 0xF0 0x00 0x00  // Allright
+
+GS Serverdata #5 // Client identification
+S0 => S1  0xF0 0x08 0x00 0x60 0x02 0x00 0x2A 0x00  // Let ClientID 42 in ?
+S0 <= S1  0xF0 0x08 0x00 0x62 0x02 0x00 0x2A 0x00  // Yes. ClientID 42 is clean
